# dim-flux

./: README.md  main.py  pyproject.toml
data/: 1.cxt  10.cxt  100.cxt  101.cxt  102.cxt  103.cxt  104.cxt  105.cxt  106.cxt  107.cxt  108.cxt  109.cxt  11.cxt  110.cxt  111.cxt  112.cxt  113.cxt  114.cxt  115.cxt  116.cxt  117.cxt  118.cxt  119.cxt  12.cxt  120.cxt  121.cxt  122.cxt  123.cxt  124.cxt  125.cxt  126.cxt  13.cxt  14.cxt  15.cxt  16.cxt  17.cxt  18.cxt  19.cxt  2.cxt  20.cxt  (+86 more)
src/dim_flux/: additive_realizer.py  dim_draw.py  lgs.py  projection.py  realizer.py
src/fca/: context.py  lattice.py
src/fdp/: forces.py  init_layout.py  sup_inf.py
src/utils/: parser.py  variables.py  visualize.py
